# spatial-touch

./: README.md  Start-SpatialTouch.ps1  start-spatial-touch.bat
config/: settings.json
spatial-touch-app/: README.md  pubspec.yaml
spatial-touch-app/assets/fonts/: .gitkeep
spatial-touch-app/assets/icons/: .gitkeep
spatial-touch-app/lib/: main.dart
spatial-touch-app/lib/src/: app.dart
spatial-touch-app/lib/src/core/config/: api_config.dart
spatial-touch-app/lib/src/core/providers/: theme_provider.dart
spatial-touch-app/lib/src/core/services/: api_service.dart  websocket_service.dart
spatial-touch-app/lib/src/core/theme/: app_theme.dart
spatial-touch-app/lib/src/features/home/: home_screen.dart
spatial-touch-app/lib/src/features/home/widgets/: nav_rail.dart  status_card.dart
spatial-touch-app/lib/src/features/settings/models/: settings_models.dart
spatial-touch-app/lib/src/features/settings/providers/: settings_provider.dart
spatial-touch-app/lib/src/features/settings/screens/: actions_settings_screen.dart  camera_settings_screen.dart  cursor_settings_screen.dart  gesture_settings_screen.dart  keybinds_screen.dart  system_settings_screen.dart  tracking_settings_screen.dart
spatial-touch-app/lib/src/features/settings/widgets/: section_header.dart  settings_card.dart  settings_slider.dart  settings_switch.dart
spatial-touch-app/test/: widget_test.dart
spatial-touch-app/windows/: CMakeLists.txt
spatial-touch-app/windows/runner/: Runner.rc  main.cpp
spatial-touch-windows/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  projectdetails.md  prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt
spatial-touch-windows/config/: gestures.json  settings.json
spatial-touch-windows/docs/: configuration.md  gestures.md  getting-started.md  index.md
spatial-touch-windows/scripts/: build.py  install_startup.py
spatial-touch-windows/src/spatial_touch/: __init__.py  __main__.py  main.py
spatial-touch-windows/src/spatial_touch/api/: __init__.py  server.py
spatial-touch-windows/src/spatial_touch/core/: __init__.py  action_dispatcher.py  camera.py  gesture_engine.py  hand_tracker.py  zone_mapper.py
spatial-touch-windows/src/spatial_touch/utils/: __init__.py  logger.py  math_helpers.py  smoothing.py
spatial-touch-windows/tests/: __init__.py  test_gesture_engine.py  test_smoothing.py
